<resources>
    <string name="app_name">PlayPro</string>
    <string name="title_activity_name">PlayPro</string>

    <string name="profile_name">Name</string>
    <string name="profile_position">Position</string>
    <string name="profile_ranking">Ranking</string>
    <string name="summary_title">Summary</string>
    <string name="distance">Distance</string>
    <string name="unit_km">Km</string>
    <string name="duration">Duration</string>

    <string name="sessions">Sessions</string>
    <string name="start">Start</string>
    <string name="speed">Speed</string>
    <string name="pause">Pause</string>
    <string name="step_frequency">Step Frequency</string>
    <string name="lock">Lock</string>
    <string name="finish">Finish</string>

    <string name="current_state_title">Current state</string>
    <string name="calorie_title">Calories: kCal</string>
    <string name="speed_title">Speed: km/h</string>
    <string name="distance_title">Distance: km</string>
    <string name="view_sessions">View all sessions</string>
    <string name="stats">Stats</string>
    <string name="personal_best">Personal best</string>
    <string name="fastest_speed">Fastest speed</string>
    <string name="longest_duration">Longest duration</string>
    <string name="longest_distance">Longest distance</string>
    <string name="km">km</string>

    <string name="stand">Stand</string>
    <string name="walk">Walk</string>
    <string name="run">Run</string>

    <string name="track">Track</string>
    <string name="details">Details</string>
    <string name="chart">Chart</string>
    <string name="field">Field</string>

    <string name="profile_image">Profile Image</string>
    <string name="user_name">User name</string>
    <string name="weight">Weight</string>
    <string name="position">Position</string>
    <string name="speed_chart">Speed chart</string>
    <string name="step_chart">Step chart</string>
    <string name="state_chart">State chart</string>
    <string name="position_chart">Position Chart</string>


    <string name="average_speed_title">Avg speed:km/h</string>
    <string name="fastest_speed_title">Max speed:km/h</string>
    <string name="pace_title">Pace: step/min</string>
    <string name="active_play">Active play</string>
    <string name="score">Score</string>
    <string name="recording">Recording</string>
    <string name="field_hint">Enter field name here</string>

    <string name="user_setting">User settings</string>
    <string name="system_setting">System settings</string>
    <string name="gps_update_accuracy">GPS accuracy</string>
    <string name="gps_update_interval">GPS update interval</string>

</resources>
