<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    app:cardCornerRadius="@dimen/conner_radius">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_normal">

        <ImageView
            android:id="@+id/profile_img"
            android:layout_width="@dimen/profile_img_size"
            android:layout_height="@dimen/profile_img_size"
            android:src="@drawable/blank_profile" />

        <TextView
            android:id="@+id/profile_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_toEndOf="@id/profile_img"
            android:text="@string/profile_name" />

        <TextView
            android:id="@+id/profile_position_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/profile_name_tv"
            android:layout_below="@id/profile_name_tv"
            android:text="@string/profile_position" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin_small"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_ranking_img"
                android:layout_width="@dimen/icon_rank_size"
                android:layout_height="@dimen/icon_rank_size"
                android:src="@drawable/icon_rank_1" />

            <TextView
                android:id="@+id/profile_ranking_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_ranking" />


        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>