<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_black">

    <RelativeLayout
        android:id="@+id/button_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin_large">

        <Button
            android:id="@+id/btn_lock"
            android:layout_width="@dimen/button_size_medium"
            android:layout_height="@dimen/button_size_medium"
            android:layout_centerVertical="true"
            android:background="@drawable/button_lock"
            android:elevation="2dp"
            android:text="@string/lock"
            android:textColor="@color/font_grey" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="@dimen/button_size_large"
            android:layout_height="@dimen/button_size_large"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_pause"
            android:elevation="2dp"
            android:text="@string/start"
            android:textColor="@color/font_grey" />

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="@dimen/button_size_medium"
            android:layout_height="@dimen/button_size_medium"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_stop"
            android:elevation="2dp"
            android:text="@string/Finish"
            android:textColor="@color/font_grey" />

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_panel"
        android:layout_margin="@dimen/margin_small"
        card_view:cardBackgroundColor="@color/black50"
        card_view:cardCornerRadius="@dimen/panel_conner_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/panel_height">

            <TextView
                android:id="@+id/tv_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:text="0 m"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_normal" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/tv_distance"
                android:layout_below="@id/tv_distance"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/distance"
                android:textColor="@android:color/white"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:text="0 km/h"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/tv_speed"
                android:layout_below="@id/tv_speed"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/speed"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/cardView"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:context="com.ricogao.playpro.activity.RecordActivity" />
</RelativeLayout>