<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="@dimen/profile_img_size"
            android:layout_height="@dimen/profile_img_size"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin_medium"
            android:src="@drawable/blank_profile" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="Name"
            android:textColor="@color/font_grey"
            android:textSize="@dimen/font_size_medium" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_centerHorizontal="true"
            android:text="2017-01-01 12:30:25"
            android:textColor="@color/font_dark_grey" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/font_dark_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="0.00 KM"
                android:textColor="@color/font_grey"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_distance"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/distance"
                android:textColor="@color/font_dark_grey" />

            <ImageView
                android:layout_width="@dimen/icon_size_extra_small"
                android:layout_height="@dimen/icon_size_extra_small"
                android:layout_alignBottom="@id/title_distance"
                android:layout_toStartOf="@id/title_distance"
                android:src="@drawable/icon_distance"
                android:tint="@color/font_grey" />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/font_dark_grey" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">


            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="00:00:00"
                android:textColor="@color/font_grey"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_time"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/duration"
                android:textColor="@color/font_dark_grey" />

            <ImageView
                android:layout_width="@dimen/icon_size_extra_small"
                android:layout_height="@dimen/icon_size_extra_small"
                android:layout_alignBottom="@id/title_time"
                android:layout_toStartOf="@id/title_time"
                android:src="@drawable/icon_time"
                android:tint="@color/font_grey" />
        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/font_dark_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_speed_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="0.00"
                android:textColor="@color/font_grey"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_speed_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_speed_average"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/average_speed_title"
                android:textAlignment="center"
                android:textColor="@color/font_dark_grey" />

            <ImageView
                android:layout_width="@dimen/icon_size_small"
                android:layout_height="@dimen/icon_size_small"
                android:layout_below="@id/title_speed_average"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_avg_speed"
                android:tint="@color/font_grey" />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/font_dark_grey" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_speed_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="0.00"
                android:textColor="@color/font_grey"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_speed_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_speed_max"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/fastest_speed_title"
                android:textAlignment="center"
                android:textColor="@color/font_dark_grey" />

            <ImageView
                android:layout_width="@dimen/icon_size_small"
                android:layout_height="@dimen/icon_size_small"
                android:layout_below="@id/title_speed_max"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_type_state"
                android:tint="@color/font_grey" />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/font_dark_grey" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_calorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="0"
                android:textColor="@color/font_grey"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_calorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_calorie"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/calorie_title"
                android:textAlignment="center"
                android:textColor="@color/font_dark_grey" />

            <ImageView
                android:layout_width="@dimen/icon_size_small"
                android:layout_height="@dimen/icon_size_small"
                android:layout_below="@+id/title_calorie"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_heat_map"
                android:tint="@color/font_grey" />
        </RelativeLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/font_dark_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_pace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="0"
                android:textColor="@color/font_grey"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_pace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_pace"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/pace_title"
                android:textAlignment="center"
                android:textColor="@color/font_dark_grey" />

            <ImageView
                android:layout_width="@dimen/icon_size_small"
                android:layout_height="@dimen/icon_size_small"
                android:layout_below="@id/title_pace"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_step"
                android:tint="@color/font_grey" />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/font_dark_grey" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_active_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="0.0%"
                android:textColor="@color/font_grey"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_active_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_active_play"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/active_play"
                android:textAlignment="center"
                android:textColor="@color/font_dark_grey" />

            <ImageView
                android:layout_width="@dimen/icon_size_small"
                android:layout_height="@dimen/icon_size_small"
                android:layout_below="@id/title_active_play"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_active"
                android:tint="@color/font_grey" />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/font_dark_grey" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="-"
                android:textColor="@color/font_grey"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_score"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/score"
                android:textAlignment="center"
                android:textColor="@color/font_dark_grey" />

            <ImageView
                android:layout_width="@dimen/icon_size_small"
                android:layout_height="@dimen/icon_size_small"
                android:src="@drawable/ic_score"
                android:tint="@color/font_grey"
                android:layout_below="@+id/title_score"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>